overlays/uat/probing-statistics-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: interop-be-probing-statistics-api
  name: interop-be-probing-statistics-api
  annotations:
    reloader.stakater.com/search: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interop-be-probing-statistics-api
  strategy: {}
  template:
    metadata:
      labels:
        app: interop-be-probing-statistics-api
    spec:
      serviceAccountName: interop-be-probing-statistics-api
      containers:
      - image: ghcr.io/pagopa/interop-be-probing-statistics-api:develop
        name: interop-be-probing-statistics-api
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 500m
            memory: 512Mi
status: {}
