overlays/uat/probing-statistics-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: interop-be-probing-statistics-api
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: interop-probing-alb-uat
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /telemetryData
        pathType: Prefix
        backend:
          service:
            name: interop-be-probing-statistics-api
            port:
               number: 80
